--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-982.9KB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: ben2.kuoyao.top, port: 38799, type: vmess, uuid: 5b89808f-236a-4889-ffd3-6c01a86da194, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /kuoyao, ws-headers: {Host: ben2.kuoyao.top}}
-  - {name: 🇨🇦 加拿大-1.37MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1018.4KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 167.88.61.175, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 167.88.61.175, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-967.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-423.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-779.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.53MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-854.9KB/s(Youtube:不良林), server: 167.88.61.175, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-707.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-689.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇩🇪 德国-982.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1018.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
