--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-967.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-423.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-779.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-1.53MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-854.9KB/s(Youtube:不良林), server: 167.88.61.175, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-707.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-689.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-967.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: 20.2.71.124, port: 80, type: vmess, uuid: bc4167fa-7394-3869-b9c0-67ae18b40f2f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.2.71.124}}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-836.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-745.2KB/s(Youtube:不良林), server: 152.69.222.253, port: 11188, type: vmess, uuid: 19f2bc05-4012-4528-ba51-9a59f55ec123, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 152.69.222.253}}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 149.57.199.151, port: 30345, type: vmess, uuid: ba771461-5a4a-43f1-a61b-20d48e49e756, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fehc, ws-headers: {Host: 149.57.199.151}}
+  - {name: 🇯🇵 日本-622.9KB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
+  - {name: 🇭🇰 香港-3.12MB/s(Youtube:不良林), server: 20.205.112.252, port: 12059, type: vmess, uuid: 4b6cd9cd-76a5-4a7c-aa8e-e252cf605157, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /dsgdf, ws-headers: {Host: 20.205.112.252}}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-779.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-967.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-836.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
